infrastructure/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.nmajor.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: oauth2-auth
          namespace: traefik
  tls: {}
